--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="lib" path="D:/Dropbox/Compiler/Ex1/Jflex Installs/java-cup-11b.jar"/>
-	<classpathentry exported="true" kind="lib" path="D:/Dropbox/Compiler/Ex1/Jflex Installs/jflex-1.6.0.zip"/>
+	<classpathentry kind="lib" path="C:/Users/mor hoyda/Desktop/לימודים- תל אביב/קומפילציה/תרגילים שלנו/Ex1/Ex1/Ex1/Jflex Installs/java-cup-11b.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mor hoyda/Desktop/לימודים- תל אביב/קומפילציה/תרגילים שלנו/Ex1/Ex1/Ex1/Jflex Installs/jflex-1.6.0.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
