--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MyCompiler</name>
+	<name>PA03</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -14,4 +14,96 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>.classpath</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/git/PA03/.classpath</locationURI>
+		</link>
+		<link>
+			<name>.git</name>
+			<type>2</type>
+			<locationURI>PARENT-2-PROJECT_LOC/git/PA03/.git</locationURI>
+		</link>
+		<link>
+			<name>.gitignore</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/git/PA03/.gitignore</locationURI>
+		</link>
+		<link>
+			<name>.project</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/git/PA03/.project</locationURI>
+		</link>
+		<link>
+			<name>.settings</name>
+			<type>2</type>
+			<locationURI>PARENT-2-PROJECT_LOC/git/PA03/.settings</locationURI>
+		</link>
+		<link>
+			<name>111.txt</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/git/PA03/111.txt</locationURI>
+		</link>
+		<link>
+			<name>Library.cup</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/git/PA03/Library.cup</locationURI>
+		</link>
+		<link>
+			<name>Quicksort.ic.ast.pdf</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/git/PA03/Quicksort.ic.ast.pdf</locationURI>
+		</link>
+		<link>
+			<name>Quicksort.ic.ast.txt</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/git/PA03/Quicksort.ic.ast.txt</locationURI>
+		</link>
+		<link>
+			<name>README.md</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/git/PA03/README.md</locationURI>
+		</link>
+		<link>
+			<name>build.xml</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/git/PA03/build.xml</locationURI>
+		</link>
+		<link>
+			<name>classes</name>
+			<type>2</type>
+			<locationURI>PARENT-2-PROJECT_LOC/git/PA03/classes</locationURI>
+		</link>
+		<link>
+			<name>doc</name>
+			<type>2</type>
+			<locationURI>PARENT-2-PROJECT_LOC/git/PA03/doc</locationURI>
+		</link>
+		<link>
+			<name>java-cup</name>
+			<type>2</type>
+			<locationURI>PARENT-2-PROJECT_LOC/git/PA03/java-cup</locationURI>
+		</link>
+		<link>
+			<name>myOut.txt</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/git/PA03/myOut.txt</locationURI>
+		</link>
+		<link>
+			<name>out.txt</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/git/PA03/out.txt</locationURI>
+		</link>
+		<link>
+			<name>src</name>
+			<type>2</type>
+			<locationURI>PARENT-2-PROJECT_LOC/git/PA03/src</locationURI>
+		</link>
+		<link>
+			<name>test</name>
+			<type>2</type>
+			<locationURI>PARENT-2-PROJECT_LOC/git/PA03/test</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
